test/libsolidity/syntaxTests/iceRegressionTests/identifier_collision_return_declare.sol
contract C {
        function ( uint ) external returns ( a [ ] calldata ) public a = ( 1 / 2 ) ;
}
// ----
// TypeError: (58-59): Name has to refer to a struct, enum or contract.
